--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mongo_dart: 0.10.4
+  provider: ^6.1.4
+  crypto: ^3.0.6
+  encrypt: ^5.0.3
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
