--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   crypto: ^3.0.6
   encrypt: ^5.0.3
   shared_preferences: ^2.5.3
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
