--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,11 @@ dependencies:
   shared_preferences: ^2.5.3
   scrollable_positioned_list: ^0.3.8
   lottie: ^3.3.1
-
+  url_launcher: ^6.3.1
+  dio: ^5.8.0
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.0
+  open_file: ^3.5.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
