--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dongo_chat
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 0.7.7
 
 environment:
   sdk: ^3.7.2
@@ -21,6 +21,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.0
   open_file: ^3.5.10
+  package_info_plus: ^8.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
