--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dongo_chat
 description: "The perfect chat to be Dongo"
 publish_to: 'none'
-version: 0.7.9
+version: 0.8.0
 
 environment:
   sdk: ^3.7.2
@@ -24,6 +24,10 @@ dependencies:
   package_info_plus: ^8.3.0
   flutter_launcher_icons: ^0.14.3
   flutter_svg: ^2.1.0
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
+  http: ^1.3.0
+  googleapis_auth: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -34,3 +38,4 @@ flutter:
   assets:
     - assets/ajolote contrast.png
     - assets/animations/
+    - assets/credentials.json
