--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "D:/Projects/dongo_chat/linux"
+    "cmake.sourceDirectory": "D:/Projects/dongo_chat/linux",
+    "conventionalCommits.scopes": [
+        "AndroidManifest.xml"
+    ]
 }
