feat(Changelog): Changelog generator added
git-chglog was added to the project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cmake.sourceDirectory": "D:/Projects/dongo_chat/linux",
     "conventionalCommits.scopes": [
-        "AndroidManifest.xml"
+        "AndroidManifest.xml",
+        "Changelog"
     ]
 }
