fix(Chat Selector): :bug: Chat selection loading fixed
The chat selection loading was fixed.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cmake.sourceDirectory": "D:/Projects/dongo_chat/linux",
     "conventionalCommits.scopes": [
         "AndroidManifest.xml",
-        "Changelog"
+        "Changelog",
+        "Chat Selector"
     ]
 }
