feat(Messages): :sparkles: New animation at send
New animation when you send a message

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "conventionalCommits.scopes": [
         "AndroidManifest.xml",
         "Changelog",
-        "Chat Selector"
+        "Chat Selector",
+        "Messages"
     ]
 }
