--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   http: ^1.3.0
   googleapis_auth: ^2.0.0
   flutter_local_notifications: ^19.1.0
+  synchronized: ^3.3.1
 
 dev_dependencies:
   flutter_test:
