--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dongo_chat
 description: "The perfect chat to be Dongo"
 publish_to: 'none'
-version: 0.9.1
+version: 0.9.1+1
 
 environment:
   sdk: ^3.7.2
