--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   mongo_dart: 0.10.4
   provider: ^6.1.4
   crypto: ^3.0.6
+  pointycastle: ^3.6.2
   encrypt: ^5.0.3
   shared_preferences: ^2.5.3
   scrollable_positioned_list: ^0.3.8
@@ -30,6 +31,7 @@ dependencies:
   googleapis_auth: ^2.0.0
   flutter_local_notifications: ^19.1.0
   synchronized: ^3.3.1
+  basic_utils: ^5.7.0
 
 dev_dependencies:
   flutter_test:
@@ -40,5 +42,4 @@ flutter:
   assets:
     - assets/ajolote contrast.png
     - assets/animations/
-    - assets/credentials.json
     - news.json
